--- a/SFCCUserProfileService/SFCCUserProfileService.csproj
+++ b/SFCCUserProfileService/SFCCUserProfileService.csproj
@@ -7,6 +7,7 @@
     <PackageReference Include="Azure.Storage.Blobs" Version="12.16.0" />
     <PackageReference Include="AzureAutoNumber" Version="1.4.0" />
     <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.34.0" />
+    <PackageReference Include="Microsoft.Azure.Functions.Extensions" Version="1.1.0" />
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="4.0.1" />
   </ItemGroup>
   <ItemGroup>
