Create sqldb query and publishing

--- a/SFCCUserProfileService/SFCCUserProfileService.csproj
+++ b/SFCCUserProfileService/SFCCUserProfileService.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.34.0" />
     <PackageReference Include="Microsoft.Azure.Functions.Extensions" Version="1.1.0" />
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="4.0.1" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
